--- a/index.html
+++ b/index.html
@@ -11,15 +11,7 @@
   <body>
     <div class="container">
       <h1 class="title">The counter!</h1>
-
-      <button type="reset" class="reset">
-        <ion-icon name="refresh-outline"></ion-icon>
-      </button>
-      <div class="counter_container">
-        <button type="button" class="minus inactive" disabled>-</button>
-        <div class="counter">0</div>
-        <button type="button" class="plus">+</button>
-      </div>
+      <div class="counter_container"></div>
       <div class="copyright">&#169; 2021 Simone Stradiotto</div>
     </div>
 
